@@ -24,6 +24,7 @@ import shop.kkeujeok.kkeujeokbackend.challenge.domain.Challenge;
 import shop.kkeujeok.kkeujeokbackend.challenge.domain.ChallengeMemberMapping;
 import shop.kkeujeok.kkeujeokbackend.challenge.domain.CycleDetail;
 import shop.kkeujeok.kkeujeokbackend.challenge.domain.repository.ChallengeRepository;
+import shop.kkeujeok.kkeujeokbackend.challenge.domain.repository.challengeMemberMapping.ChallengeMemberMappingRepository;
 import shop.kkeujeok.kkeujeokbackend.challenge.exception.ChallengeAccessDeniedException;
 import shop.kkeujeok.kkeujeokbackend.challenge.exception.ChallengeNotFoundException;
 import shop.kkeujeok.kkeujeokbackend.dashboard.domain.Dashboard;
@@ -41,7 +42,7 @@ import shop.kkeujeok.kkeujeokbackend.notification.application.NotificationServic
 @RequiredArgsConstructor
 public class ChallengeService {
 
-    private static final String CHALLENGE_JOIN_MESSAGE = "%s님이 챌린지에 참여했습니다";
+    private static final String CHALLENGE_JOIN_MESSAGE = "챌린지 참여: %s님이 챌린지에 참여했습니다";
     private static final String START_DATE_FORMAT = "yyyy.MM.dd HH:mm";
     private static final String DEADLINE_DATE_FORMAT = "yyyy.MM.dd 23:59";
 
@@ -51,6 +52,7 @@ public class ChallengeService {
     private final BlockRepository blockRepository;
     private final NotificationService notificationService;
     private final S3Service s3Service;
+    private final ChallengeMemberMappingRepository challengeMemberMappingRepository;
 
     @Transactional
     public ChallengeInfoResDto save(String email, ChallengeSaveReqDto challengeSaveReqDto,
@@ -132,6 +134,9 @@ public class ChallengeService {
         Challenge challenge = findChallengeById(challengeId);
         verifyMemberIsAuthor(challenge, member);
 
+        Set<ChallengeMemberMapping> challengeMemberMappings = challenge.getParticipants();
+        challenge.getParticipants().removeAll(challengeMemberMappings);
+
         challenge.updateStatus();
     }
 
@@ -182,7 +187,6 @@ public class ChallengeService {
                         .collect(Collectors.joining(", "));
     }
 
-
     @Transactional(readOnly = true)
     public ChallengeListResDto findChallengeForMemberId(String email, Pageable pageable) {
         Member member = memberRepository.findByEmail(email).orElseThrow(MemberNotFoundException::new);
@@ -204,7 +208,7 @@ public class ChallengeService {
 
         List<ChallengeInfoResDto> challengeInfoResDtoList = challenges.stream()
                 .map(ChallengeInfoResDto::from)
-                .toList();
+                .collect(Collectors.toList());
 
         return ChallengeListResDto.of(challengeInfoResDtoList, PageInfoResDto.from(challenges));
     }
@@ -222,7 +226,6 @@ public class ChallengeService {
         challenge.removeParticipant(mapping);
         challengeRepository.save(challenge);
     }
-
 
     private Member findMemberByEmail(String email) {
         return memberRepository.findByEmail(email)
